# sea-pickle

./: README.md
py_pickle/: README.md  pyproject.toml
py_pickle/src/: pickler.py
py_pickle/src/opcodes/: opcodes.py
py_pickle/src/py_pickle/: __init__.py
py_pickle/tests/: test_pickle.py
sea_pickle/: README.md  pyproject.toml  setup.py
sea_pickle/scripts/: build_script.sh
sea_pickle/sea_pickle/: __init__.py  sea_pickle.c  sea_pickle.h
sea_pickle/src/sea_pickle/: sea_pickle.c  sea_pickle.h
sea_pickle/tests/: sea_pickle_tests.py  test_sea_pickle.py
