[project]
name = "sea-pickle"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "DerekW3", email = "92753567+DerekW3@users.noreply.github.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []
