[project]
name = "sea-pickle"
version = "0.1.0"
description = "A true C pickle"
authors = [
    { name = "DerekW3", email = "92753567+DerekW3@users.noreply.github.com" },
]
dependencies = [
    "setuptools>=75.3.0",
    "cython>=3.0.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["setuptools >= 75.3.0", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
    { name = "seapickle", sources = [
        "sea_pickle/sea_pickle.c",
    ], include-dirs = [
        "sea_pickle",
    ] },
]

[tool.rye]
managed = true
dev-dependencies = []
