[project]
name = "sea-pickle"
version = "0.1.0"
description = "A true C pickle"
authors = [
    { name = "DerekW3", email = "92753567+DerekW3@users.noreply.github.com" },
]
dependencies = [
    "setuptools>=75.3.0",
    "pip>=24.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sea_pickle"]
include-package-data = true

[tool.rye]
managed = true
dev-dependencies = []
